优化玩家数据